// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text -- Android should have the correct font family 1`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontFamily": "Roboto",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Android should have the correct font family 2`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontWeight": "700",
      },
      Object {
        "fontFamily": "RobotoBold",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Android should have the correct font family 3`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontFamily": "RobotoItalic",
      },
    ]
  }
>
  Lorem
</Text>
`;

exports[`Text -- Android should have the correct font family 4`] = `
<Text
  style={
    Array [
      Object {
        "margin": 0,
      },
      Object {
        "fontStyle": "italic",
      },
      Object {
        "fontWeight": "700",
      },
      Object {
        "fontFamily": "RobotoBoldItalic",
      },
    ]
  }
>
  Lorem
</Text>
`;
